// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly with All props. 1`] = `
<div
  className="tsc-timeslot custom-class"
  onClick={[Function]}
>
  1:00 PM - 2:00 AM
</div>
`;

exports[`Renders when customClassNames is null 1`] = `
<div
  className="tsc-timeslot"
  onClick={[Function]}
>
  1:00 PM - 2:00 AM
</div>
`;

exports[`Renders when customClassNames prop is not provided 1`] = `
<div
  className="tsc-timeslot"
  onClick={[Function]}
>
  1:00 PM - 2:00 AM
</div>
`;
